--- a/HTML/reg.html
+++ b/HTML/reg.html
@@ -24,9 +24,9 @@
             if (password.value != password2.value)
             {
                 console.log("ne sovpal")
+                return
             }
-            else
-            {
+
                 let response = await fetch('/api/register', {
                 method: 'POST',
                 headers: {
@@ -39,7 +39,7 @@
             })
             let data = await response.json()
             console.log(data)
-            }
+
         }
     </script>
 </body>
