--- a/HTML/login.html
+++ b/HTML/login.html
@@ -37,6 +37,11 @@
             localStorage.setItem('token', token)
             console.log(localStorage.getItem('token'))
 
+            if (response.status == 404){
+                alert("введите данные заново(нет такого пользователя)")
+                return
+            }
+
             window.location = "/"
         }
     </script>
